--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ body {
 
 h1 {
     margin-top: 10px;
-    /* margin: 0;
+    margin: 0;
     padding: 1rem;
-    text-align: center; */
+    text-align: center; 
     /* margin-bottom: -270px;
     margin-top: 10px; */
 }
