--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     margin: 0;
     padding: 1rem;
     text-align: center; 
