--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Ibarra Real Nova', serif;
     background-color: #b8c6db;
     background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: grid;
     align-items: center;
     justify-content: center;
